libqt6c/src/libqdialog.hpp

#pragma once
#ifndef SRCC_LIBQDIALOG_HPP
#define SRCC_LIBQDIALOG_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDialog QDialog;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QDialog* QDialog_new(QWidget* parent);
QDialog* QDialog_new2();
QDialog* QDialog_new3(QWidget* parent, int f);
QMetaObject* QDialog_MetaObject(const QDialog* self);
void* QDialog_Metacast(QDialog* self, const char* param1);
int QDialog_Metacall(QDialog* self, int param1, int param2, void** param3);
int QDialog_Result(const QDialog* self);
void QDialog_SetVisible(QDialog* self, bool visible);
QSize* QDialog_SizeHint(const QDialog* self);
QSize* QDialog_MinimumSizeHint(const QDialog* self);
void QDialog_SetSizeGripEnabled(QDialog* self, bool sizeGripEnabled);
bool QDialog_IsSizeGripEnabled(const QDialog* self);
void QDialog_SetModal(QDialog* self, bool modal);
void QDialog_SetResult(QDialog* self, int r);
void QDialog_Finished(QDialog* self, int result);
void QDialog_Connect_Finished(QDialog* self, intptr_t slot);
void QDialog_Accepted(QDialog* self);
void QDialog_Connect_Accepted(QDialog* self, intptr_t slot);
void QDialog_Rejected(QDialog* self);
void QDialog_Connect_Rejected(QDialog* self, intptr_t slot);
void QDialog_Open(QDialog* self);
int QDialog_Exec(QDialog* self);
void QDialog_Done(QDialog* self, int param1);
void QDialog_Accept(QDialog* self);
void QDialog_Reject(QDialog* self);
void QDialog_KeyPressEvent(QDialog* self, QKeyEvent* param1);
void QDialog_CloseEvent(QDialog* self, QCloseEvent* param1);
void QDialog_ShowEvent(QDialog* self, QShowEvent* param1);
void QDialog_ResizeEvent(QDialog* self, QResizeEvent* param1);
void QDialog_ContextMenuEvent(QDialog* self, QContextMenuEvent* param1);
bool QDialog_EventFilter(QDialog* self, QObject* param1, QEvent* param2);
void QDialog_OnMetaObject(const QDialog* self, intptr_t slot);
QMetaObject* QDialog_SuperMetaObject(const QDialog* self);
void QDialog_OnMetacast(QDialog* self, intptr_t slot);
void* QDialog_SuperMetacast(QDialog* self, const char* param1);
void QDialog_OnMetacall(QDialog* self, intptr_t slot);
int QDialog_SuperMetacall(QDialog* self, int param1, int param2, void** param3);
void QDialog_OnSetVisible(QDialog* self, intptr_t slot);
void QDialog_SuperSetVisible(QDialog* self, bool visible);
void QDialog_OnSizeHint(const QDialog* self, intptr_t slot);
QSize* QDialog_SuperSizeHint(const QDialog* self);
void QDialog_OnMinimumSizeHint(const QDialog* self, intptr_t slot);
QSize* QDialog_SuperMinimumSizeHint(const QDialog* self);
void QDialog_OnOpen(QDialog* self, intptr_t slot);
void QDialog_SuperOpen(QDialog* self);
void QDialog_OnExec(QDialog* self, intptr_t slot);
int QDialog_SuperExec(QDialog* self);
void QDialog_OnDone(QDialog* self, intptr_t slot);
void QDialog_SuperDone(QDialog* self, int param1);
void QDialog_OnAccept(QDialog* self, intptr_t slot);
void QDialog_SuperAccept(QDialog* self);
void QDialog_OnReject(QDialog* self, intptr_t slot);
void QDialog_SuperReject(QDialog* self);
void QDialog_OnKeyPressEvent(QDialog* self, intptr_t slot);
void QDialog_SuperKeyPressEvent(QDialog* self, QKeyEvent* param1);
void QDialog_OnCloseEvent(QDialog* self, intptr_t slot);
void QDialog_SuperCloseEvent(QDialog* self, QCloseEvent* param1);
void QDialog_OnShowEvent(QDialog* self, intptr_t slot);
void QDialog_SuperShowEvent(QDialog* self, QShowEvent* param1);
void QDialog_OnResizeEvent(QDialog* self, intptr_t slot);
void QDialog_SuperResizeEvent(QDialog* self, QResizeEvent* param1);
void QDialog_OnContextMenuEvent(QDialog* self, intptr_t slot);
void QDialog_SuperContextMenuEvent(QDialog* self, QContextMenuEvent* param1);
void QDialog_OnEventFilter(QDialog* self, intptr_t slot);
bool QDialog_SuperEventFilter(QDialog* self, QObject* param1, QEvent* param2);
int QDialog_DevType(const QDialog* self);
void QDialog_OnDevType(const QDialog* self, intptr_t slot);
int QDialog_SuperDevType(const QDialog* self);
int QDialog_HeightForWidth(const QDialog* self, int param1);
void QDialog_OnHeightForWidth(const QDialog* self, intptr_t slot);
int QDialog_SuperHeightForWidth(const QDialog* self, int param1);
bool QDialog_HasHeightForWidth(const QDialog* self);
void QDialog_OnHasHeightForWidth(const QDialog* self, intptr_t slot);
bool QDialog_SuperHasHeightForWidth(const QDialog* self);
QPaintEngine* QDialog_PaintEngine(const QDialog* self);
void QDialog_OnPaintEngine(const QDialog* self, intptr_t slot);
QPaintEngine* QDialog_SuperPaintEngine(const QDialog* self);
bool QDialog_Event(QDialog* self, QEvent* event);
void QDialog_OnEvent(QDialog* self, intptr_t slot);
bool QDialog_SuperEvent(QDialog* self, QEvent* event);
void QDialog_MousePressEvent(QDialog* self, QMouseEvent* event);
void QDialog_OnMousePressEvent(QDialog* self, intptr_t slot);
void QDialog_SuperMousePressEvent(QDialog* self, QMouseEvent* event);
void QDialog_MouseReleaseEvent(QDialog* self, QMouseEvent* event);
void QDialog_OnMouseReleaseEvent(QDialog* self, intptr_t slot);
void QDialog_SuperMouseReleaseEvent(QDialog* self, QMouseEvent* event);
void QDialog_MouseDoubleClickEvent(QDialog* self, QMouseEvent* event);
void QDialog_OnMouseDoubleClickEvent(QDialog* self, intptr_t slot);
void QDialog_SuperMouseDoubleClickEvent(QDialog* self, QMouseEvent* event);
void QDialog_MouseMoveEvent(QDialog* self, QMouseEvent* event);
void QDialog_OnMouseMoveEvent(QDialog* self, intptr_t slot);
void QDialog_SuperMouseMoveEvent(QDialog* self, QMouseEvent* event);
void QDialog_WheelEvent(QDialog* self, QWheelEvent* event);
void QDialog_OnWheelEvent(QDialog* self, intptr_t slot);
void QDialog_SuperWheelEvent(QDialog* self, QWheelEvent* event);
void QDialog_KeyReleaseEvent(QDialog* self, QKeyEvent* event);
void QDialog_OnKeyReleaseEvent(QDialog* self, intptr_t slot);
void QDialog_SuperKeyReleaseEvent(QDialog* self, QKeyEvent* event);
void QDialog_FocusInEvent(QDialog* self, QFocusEvent* event);
void QDialog_OnFocusInEvent(QDialog* self, intptr_t slot);
void QDialog_SuperFocusInEvent(QDialog* self, QFocusEvent* event);
void QDialog_FocusOutEvent(QDialog* self, QFocusEvent* event);
void QDialog_OnFocusOutEvent(QDialog* self, intptr_t slot);
void QDialog_SuperFocusOutEvent(QDialog* self, QFocusEvent* event);
void QDialog_EnterEvent(QDialog* self, QEnterEvent* event);
void QDialog_OnEnterEvent(QDialog* self, intptr_t slot);
void QDialog_SuperEnterEvent(QDialog* self, QEnterEvent* event);
void QDialog_LeaveEvent(QDialog* self, QEvent* event);
void QDialog_OnLeaveEvent(QDialog* self, intptr_t slot);
void QDialog_SuperLeaveEvent(QDialog* self, QEvent* event);
void QDialog_PaintEvent(QDialog* self, QPaintEvent* event);
void QDialog_OnPaintEvent(QDialog* self, intptr_t slot);
void QDialog_SuperPaintEvent(QDialog* self, QPaintEvent* event);
void QDialog_MoveEvent(QDialog* self, QMoveEvent* event);
void QDialog_OnMoveEvent(QDialog* self, intptr_t slot);
void QDialog_SuperMoveEvent(QDialog* self, QMoveEvent* event);
void QDialog_TabletEvent(QDialog* self, QTabletEvent* event);
void QDialog_OnTabletEvent(QDialog* self, intptr_t slot);
void QDialog_SuperTabletEvent(QDialog* self, QTabletEvent* event);
void QDialog_ActionEvent(QDialog* self, QActionEvent* event);
void QDialog_OnActionEvent(QDialog* self, intptr_t slot);
void QDialog_SuperActionEvent(QDialog* self, QActionEvent* event);
void QDialog_DragEnterEvent(QDialog* self, QDragEnterEvent* event);
void QDialog_OnDragEnterEvent(QDialog* self, intptr_t slot);
void QDialog_SuperDragEnterEvent(QDialog* self, QDragEnterEvent* event);
void QDialog_DragMoveEvent(QDialog* self, QDragMoveEvent* event);
void QDialog_OnDragMoveEvent(QDialog* self, intptr_t slot);
void QDialog_SuperDragMoveEvent(QDialog* self, QDragMoveEvent* event);
void QDialog_DragLeaveEvent(QDialog* self, QDragLeaveEvent* event);
void QDialog_OnDragLeaveEvent(QDialog* self, intptr_t slot);
void QDialog_SuperDragLeaveEvent(QDialog* self, QDragLeaveEvent* event);
void QDialog_DropEvent(QDialog* self, QDropEvent* event);
void QDialog_OnDropEvent(QDialog* self, intptr_t slot);
void QDialog_SuperDropEvent(QDialog* self, QDropEvent* event);
void QDialog_HideEvent(QDialog* self, QHideEvent* event);
void QDialog_OnHideEvent(QDialog* self, intptr_t slot);
void QDialog_SuperHideEvent(QDialog* self, QHideEvent* event);
bool QDialog_NativeEvent(QDialog* self, const libqt_string eventType, void* message, intptr_t* result);
void QDialog_OnNativeEvent(QDialog* self, intptr_t slot);
bool QDialog_SuperNativeEvent(QDialog* self, const libqt_string eventType, void* message, intptr_t* result);
void QDialog_ChangeEvent(QDialog* self, QEvent* param1);
void QDialog_OnChangeEvent(QDialog* self, intptr_t slot);
void QDialog_SuperChangeEvent(QDialog* self, QEvent* param1);
int QDialog_Metric(const QDialog* self, int param1);
void QDialog_OnMetric(const QDialog* self, intptr_t slot);
int QDialog_SuperMetric(const QDialog* self, int param1);
void QDialog_InitPainter(const QDialog* self, QPainter* painter);
void QDialog_OnInitPainter(const QDialog* self, intptr_t slot);
void QDialog_SuperInitPainter(const QDialog* self, QPainter* painter);
QPaintDevice* QDialog_Redirected(const QDialog* self, QPoint* offset);
void QDialog_OnRedirected(const QDialog* self, intptr_t slot);
QPaintDevice* QDialog_SuperRedirected(const QDialog* self, QPoint* offset);
QPainter* QDialog_SharedPainter(const QDialog* self);
void QDialog_OnSharedPainter(const QDialog* self, intptr_t slot);
QPainter* QDialog_SuperSharedPainter(const QDialog* self);
void QDialog_InputMethodEvent(QDialog* self, QInputMethodEvent* param1);
void QDialog_OnInputMethodEvent(QDialog* self, intptr_t slot);
void QDialog_SuperInputMethodEvent(QDialog* self, QInputMethodEvent* param1);
QVariant* QDialog_InputMethodQuery(const QDialog* self, int param1);
void QDialog_OnInputMethodQuery(const QDialog* self, intptr_t slot);
QVariant* QDialog_SuperInputMethodQuery(const QDialog* self, int param1);
bool QDialog_FocusNextPrevChild(QDialog* self, bool next);
void QDialog_OnFocusNextPrevChild(QDialog* self, intptr_t slot);
bool QDialog_SuperFocusNextPrevChild(QDialog* self, bool next);
void QDialog_TimerEvent(QDialog* self, QTimerEvent* event);
void QDialog_OnTimerEvent(QDialog* self, intptr_t slot);
void QDialog_SuperTimerEvent(QDialog* self, QTimerEvent* event);
void QDialog_ChildEvent(QDialog* self, QChildEvent* event);
void QDialog_OnChildEvent(QDialog* self, intptr_t slot);
void QDialog_SuperChildEvent(QDialog* self, QChildEvent* event);
void QDialog_CustomEvent(QDialog* self, QEvent* event);
void QDialog_OnCustomEvent(QDialog* self, intptr_t slot);
void QDialog_SuperCustomEvent(QDialog* self, QEvent* event);
void QDialog_ConnectNotify(QDialog* self, const QMetaMethod* signal);
void QDialog_OnConnectNotify(QDialog* self, intptr_t slot);
void QDialog_SuperConnectNotify(QDialog* self, const QMetaMethod* signal);
void QDialog_DisconnectNotify(QDialog* self, const QMetaMethod* signal);
void QDialog_OnDisconnectNotify(QDialog* self, intptr_t slot);
void QDialog_SuperDisconnectNotify(QDialog* self, const QMetaMethod* signal);
void QDialog_AdjustPosition(QDialog* self, QWidget* param1);
void QDialog_OnAdjustPosition(QDialog* self, intptr_t slot);
void QDialog_SuperAdjustPosition(QDialog* self, QWidget* param1);
void QDialog_UpdateMicroFocus(QDialog* self);
void QDialog_OnUpdateMicroFocus(QDialog* self, intptr_t slot);
void QDialog_SuperUpdateMicroFocus(QDialog* self);
void QDialog_Create(QDialog* self);
void QDialog_OnCreate(QDialog* self, intptr_t slot);
void QDialog_SuperCreate(QDialog* self);
void QDialog_Destroy(QDialog* self);
void QDialog_OnDestroy(QDialog* self, intptr_t slot);
void QDialog_SuperDestroy(QDialog* self);
bool QDialog_FocusNextChild(QDialog* self);
void QDialog_OnFocusNextChild(QDialog* self, intptr_t slot);
bool QDialog_SuperFocusNextChild(QDialog* self);
bool QDialog_FocusPreviousChild(QDialog* self);
void QDialog_OnFocusPreviousChild(QDialog* self, intptr_t slot);
bool QDialog_SuperFocusPreviousChild(QDialog* self);
QObject* QDialog_Sender(const QDialog* self);
void QDialog_OnSender(const QDialog* self, intptr_t slot);
QObject* QDialog_SuperSender(const QDialog* self);
int QDialog_SenderSignalIndex(const QDialog* self);
void QDialog_OnSenderSignalIndex(const QDialog* self, intptr_t slot);
int QDialog_SuperSenderSignalIndex(const QDialog* self);
int QDialog_Receivers(const QDialog* self, const char* signal);
void QDialog_OnReceivers(const QDialog* self, intptr_t slot);
int QDialog_SuperReceivers(const QDialog* self, const char* signal);
bool QDialog_IsSignalConnected(const QDialog* self, const QMetaMethod* signal);
void QDialog_OnIsSignalConnected(const QDialog* self, intptr_t slot);
bool QDialog_SuperIsSignalConnected(const QDialog* self, const QMetaMethod* signal);
void QDialog_Delete(QDialog* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif